<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.med_manager.ui.LoginActivity">

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="202dp"
            android:layout_height="158dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_launcher_app"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/sign_in_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:drawableStart="@drawable/ic_menu_user_info"
                    android:drawablePadding="8dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/title_username"
                    android:textColorHint="@android:color/white"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:drawableStart="@drawable/ic_password_24px"
                    android:drawablePadding="8dp"
                    android:hint="@string/fui_password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="102dp"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/text_login"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_up_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_name_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/sign_up_name"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:drawableStart="@drawable/ic_menu_user_info"
                    android:drawablePadding="8dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/title_name"
                    android:textColorHint="@android:color/white"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_email_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:drawableStart="@drawable/ic_email_24px"
                    android:drawablePadding="8dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/fui_email_hint"
                    android:textColorHint="@android:color/white"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_password_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:drawableStart="@drawable/ic_password_24px"
                    android:drawablePadding="8dp"
                    android:hint="@string/fui_password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="102dp"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/text_sign_up"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_google_sign_in"
            android:layout_width="298dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/google_sign_in"
            android:background="@drawable/round_bg"/>

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/text_sign_up"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    </LinearLayout>

    <!-- Loading indicator for user feedback between queries to server -->
    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible"/>
</RelativeLayout>
